# internal/routes/routes.go
@@ -63,6 +63,8 @@ func ApplyRoutes(router *gin.Engine, db *sql.DB) {
 		chats.DELETE("/:chatId", handlers.DeleteChatHandler(chatService))
 		chats.PUT("/:chatId", handlers.UpdateChatHandler(chatService))
 		chats.POST("/:chatId/members", handlers.AddChatMemberHandler(chatService))
+		chats.PUT("/:chatId/members", handlers.UpdateChatMemberHandler(chatService))
+		chats.DELETE("/:chatId/members", handlers.DeleteChatMemberHandler(chatService))
 		chats.GET("", handlers.GetChatsByUserIdHandler(chatService))
 		chats.PUT("/:chatId/typing", handlers.TypingHandler(repos.UserRepository, repos.ChatRepository, eventBus))
 	}
@@ -72,6 +74,7 @@ func ApplyRoutes(router *gin.Engine, db *sql.DB) {
 		messages := v1.Group("/messages")
 		messages.Use(middleware.AuthMiddleware())
 		messages.POST("", handlers.CreateMessageHandler(messageService))
+		messages.DELETE("/:messageId", handlers.DeleteMessageHandler(messageService))
 	}
 
 	v1.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
